--- a/index.html
+++ b/index.html
@@ -7,7 +7,14 @@
     <title>Document</title>
   </head>
   <body>
-    <h1>Mi TODO list</h1>
+    <div class="container">
+      <h1>Lista de Tareas</h1>
+      <div class="input-container">
+      <input type="text" id="taskInput" placeholder="Agregar nueva tarea...">
+      <button onclick="addTask()">Agregar</button>
+      </div>
+      <ul id="taskList"></ul>
+      </div>
     <script src="scripts/script.js"></script>
   </body>
 </html>
