--- a/index.html
+++ b/index.html
@@ -7,14 +7,24 @@
     <title>Document</title>
   </head>
   <body>
-    <div class="container">
-      <h1>Lista de Tareas</h1>
-      <div class="input-container">
-      <input type="text" id="taskInput" placeholder="Agregar nueva tarea...">
-      <button onclick="addTask()">Agregar</button>
-      </div>
-      <ul id="taskList"></ul>
-      </div>
+    <h1>Lista de Tareas</h1>
+    <div class="input-container">
+      <input type="text" id="nueva-tarea" placeholder="Nueva tarea" />
+      <button id="agregar-tarea">Agregar</button>
+    </div>
+    <ul id="lista-tareas">
+        <li>
+            <input type="checkbox">
+            <label for="tarea-1">Tarea 1</label>
+            <button class="eliminar">Eliminar</button>
+        </li>
+        <li>
+            <input type="checkbox">
+            <label for="tarea-2">Tarea 2</label>
+            <button class="eliminar">Eliminar</button>
+        </li>
+    </ul>
     <script src="scripts/script.js"></script>
   </body>
 </html>
+
