--- a/index.html
+++ b/index.html
@@ -7,21 +7,21 @@
     <title>Document</title>
   </head>
   <body>
-    <h1>Lista de Tareas</h1>
+    <img src="/assets/TO DO LIST.png">
     <div class="input-container">
-      <input type="text" id="nueva-tarea" placeholder="Nueva tarea" />
-      <button id="agregar-tarea">Agregar</button>
+        <input type="text" id="nueva-tarea" placeholder="Nueva tarea" />
+        <button id="agregar-tarea"><i class="fas fa-plus"></i> <span>Agregar</span></button>
     </div>
     <ul id="lista-tareas">
         <li>
             <input type="checkbox">
             <label for="tarea-1">Tarea 1</label>
-            <button class="eliminar">Eliminar</button>
+            <button class="eliminar"><i class="fas fa-trash"></i></button>
         </li>
         <li>
             <input type="checkbox">
             <label for="tarea-2">Tarea 2</label>
-            <button class="eliminar">Eliminar</button>
+            <button class="eliminar"><i class="fas fa-trash"></i></button>
         </li>
     </ul>
     <script src="scripts/script.js"></script>
