--- a/index.html
+++ b/index.html
@@ -1,12 +1,13 @@
 <!DOCTYPE html>
-<html lang="en">
-  <head>
+<html lang="en">  
+<head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="./styles/styles.css" />
     <title>Document</title>
   </head>
   <body>
+    <div class="container">
     <img src="/assets/TO DO LIST.png">
     <div class="input-container">
         <input type="text" id="nueva-tarea" placeholder="Nueva tarea" />
@@ -24,6 +25,7 @@
             <button class="eliminar"><i class="fas fa-trash"></i></button>
         </li>
     </ul>
+    </div>
     <script src="scripts/script.js"></script>
   </body>
 </html>
