--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   </head>
   <body>
     <div class="container">
-    <img src="/assets/TO DO LIST.png">
+    <img src="./assets/img.png">
     <div class="input-container">
         <input type="text" id="nueva-tarea" placeholder="Nueva tarea" />
         <button id="agregar-tarea"><i class="fas fa-plus"></i> <span>Agregar</span></button>
